fix box stroke not overlapping

--- a/src/components/Box/Box.module.css
+++ b/src/components/Box/Box.module.css
@@ -19,4 +19,5 @@
 
 svg {
   shape-rendering: geometricPrecision;
+  overflow: visible;
 }
